--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "mongoose": "^7.1.2",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^4.0.2",
+    "nanoid": "3.3.4",
     "nodemailer": "^6.9.3",
     "uuid": "^9.0.0"
   },
